--- a/THE-TRUTH-ABOUT-DRUGS/fact.css
+++ b/THE-TRUTH-ABOUT-DRUGS/fact.css
@@ -28,7 +28,7 @@
                 text-align: center;
                 background-color: #0cbaba;
                 background-image: linear-gradient(315deg, #0cbaba 0%, #380036 74%);
-                
+                width:100%;
                 color: white;
               }
             .footer {
@@ -36,7 +36,7 @@
                 text-align: center;
                 background-color: #0cbaba;
                 background-image: linear-gradient(315deg, #0cbaba 0%, #380036 74%);
-                
+                width:100%;
                 color: white;
               } 
             #a1
